## This file is part of Invenio.
## Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

webdir = $(localstatedir)/www/tex4web

web_DATA = bootstrap.js \
           tex4web.js \
           tex4web_sw.mozilla.cache.html \
           tex4web_sw.opera.cache.html \
           error.js \
           resizer_200.png \
           tex4web_sw.html \
           tex4web_sw.nocache.html \
           tex4web_sw.safari.cache.html \
           error.png \
           tex4web.css \
           tex4web_sw.ie6.cache.html \
           tex4web_sw.oldmoz.cache.html

EXTRA_DIST = $(web_DATA)

CLEANFILES = *~ *.tmp
